2014-06-13  Titus Brown  <t@Titus-MacBook-Air-2.local>

    * doc/install.txt: updated virtuaenv command to use python2 explicitly,
	for arch support.

2014-06-13  Titus Brown  <t@idyll.org>

    * khmer/__init__.py, khmer/file_args.py: Moved copyright message to a
	comment.
    * khmer/file.py: updated error messages for disk-space checking functions;
	added test hooks.
    * tests/test_script_arguments.py: added tests for several functions in
	khmer/file.py.
    * sandbox/assemstats3.py: handle missing input files.

2014-06-11  Michael Wright <wrigh517@msu.edu>

    * scripts/load-into-counting: Fixed docstring misnomer to 
    load-into-counting.py

2014-06-10  Titus Brown  <t@idyll.org>

    * Makefile: remove SHELL setting so that 'make doc' works in virtualenvs.
    * scripts/sample-reads-randomly.py: extend to take multiple subsamples
	with -S.
    * tests/test_scripts.py: added test for multiple subsamples from
	sample-reads-randomly.py

2014-06-10  Michael Wright <wrigh517@msu.edu>

    * scripts/extract-long-sequences: Moved from sandbox, added argparse and 
    FASTQ support.
    * scripts/fastq-to-fasta: Fixed outdated argparse oversight.
    * tests/test_scripts.py: Added tests for extract-long-sequences.py

2014-06-04  Michael R. Crusoe <mcrusoe@msu.edu>

    * lib/Makefile: do a distclean as the CFLAGS may have changed. Fixes #442

2014-06-08  Titus Brown  <t@idyll.org>

    * doc/conf.py: set google_analytics_id and disqus_shortname properly;
	disable "editme" popup.
    * doc/_templates/page.html: take google_analytics_id and disqus_shortname
	from doc/conf.py.

2014-06-03 Chuck Pepe-Ranney <chuck.peperanney@gmail.com>

    * scripts/abundance-dist.py: removed call to check_space on infiles.  

2014-05-30  Titus Brown  <t@idyll.org>

    * khmer/_khmermodule.cc: remove merge2* functions: unused, untested.
    * lib/counting.cc, lib/hashbits.cc, lib/hashtable.cc: made file loading
	exceptions more verbose and informative.