@@ -1,7 +1,6 @@
 include ChangeLog ez_setup.py IDEAS Makefile README.rst setup.cfg
 include versioneer.py MANIFEST.in CITATION CONTRIBUTING.md Doxyfile.in
 include LICENSE TODO .ycm_extra_conf.py
-graft examples
 recursive-include lib *.hh *.cc [Mm]akefile* get_version.py
 recursive-include third-party *.cc *.1 *.xsl README* sample* words* *.sh *.c
 recursive-include third-party manual* [Mm]akefile* *.pl *.dsp CHANGES *.txt *.h
@@ -10,10 +9,6 @@ recursive-include third-party/bzip2 bzip.css entities.xml libbz2.def LICENSE
 include third-party/zlib/zconf.h.in third-party/zlib/zlib.pc.in
 exclude third-party/zlib/Makefile third-party/zlib/zconf.h
 recursive-include scripts filter-abund.xml normalize-by-median.xml README.txt
-graft doc
-prune doc/doxygen
-graft data
-graft examples
 graft tests
 global-exclude *.orig
 global-exclude *.pyc
